--- a/ForecastingWeb/views/index.pug
+++ b/ForecastingWeb/views/index.pug
@@ -6,7 +6,7 @@ mixin space()
 block content
   #header
     img#networkImage(src='images/neuralNetwork.svg' alt='Neural network')
-    h1.title Atmospheric pollution forecast
+    h1.title Air contamination forecast for Madrid
   #content
     p#actualValues AQI actual values
     #pollutionData
