--- a/ForecastingWeb/views/index.pug
+++ b/ForecastingWeb/views/index.pug
@@ -450,4 +450,4 @@ block content
       
   #footer
     img#usalImage(src='images/usal.png' alt='USAL')
-    h3(style=" align-self: flex-end; padding:35px") Ismael Mira Hernández | TFG Grado en Ingeniería Informática | 2022
+    h3 Ismael Mira Hernández | TFG Grado en Ingeniería Informática | 2022
